--- a/src/ToolBar/style.css
+++ b/src/ToolBar/style.css
@@ -45,7 +45,6 @@
   padding: 3px;
   padding-bottom: 2px;
   border-radius: 3px;
-  border: 1px solid white;
   height: 32px;
   width: 30px;
   display: flex;
@@ -104,7 +103,6 @@
   padding-bottom: 5px;
   padding-top: 5px;
   border-radius: 3px;
-  border: 1px solid white;
 }
 .veToolbarDropdown:hover {
   background: lightgrey;
